panes and toggles

--- a/c1_frontend_ui_frameworks_tools/bootstrap-intro/css/main.css
+++ b/c1_frontend_ui_frameworks_tools/bootstrap-intro/css/main.css
@@ -48,3 +48,10 @@ body {
 .navbar-dark {
     background-color: #512DAB;
 }
+
+.tab-content {
+    padding: 10px;
+    border-left: 1px solid #ddd;
+    border-right: 1px solid #ddd;
+    border-bottom: 1px solid #ddd;
+}
