--- a/c1_frontend_ui_frameworks_tools/bootstrap-intro/css/main.css
+++ b/c1_frontend_ui_frameworks_tools/bootstrap-intro/css/main.css
@@ -55,3 +55,18 @@ body {
     border-right: 1px solid #ddd;
     border-bottom: 1px solid #ddd;
 }
+
+.carousel {
+    background: #512DAB;
+}
+
+.carousel-item {
+    height:300px;
+}
+
+.carousel-item img {
+    position: absolute;
+    top: 0;
+    left: 0;
+    min-height:300px;
+}
